<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Iolite</string>
	<string name="long_app_name">Iolite for Iodine</string>
	<string name="button_login">LOGIN</string>

	<string name="field_username">Username</string>
	<string name="field_password">Password</string>

	<string name="view_about">About</string>
	<string name="view_activity">Activities</string>
	<string name="view_activity_details">Activity Details</string>
	<string name="view_block">Blocks</string>
	<string name="view_home">Home</string>
	<string name="view_news">News</string>
	<string name="view_news_details"/>
	<string name="view_schedule">Schedule</string>

	<string name="nav_blocks">Eighth</string>
	<string name="nav_schedule">Schedule</string>
	<string name="nav_news">News</string>
	<string name="nav_settings">Settings</string>
	<string name="nav_about">About</string>
	<string name="nav_logout">Logout</string>

	<string name="action_refresh">Refresh</string>
	<string name="action_settings">Settings</string>
	<string name="action_search">Search</string>
	<string name="action_drawer_open">Drawer Open</string>
	<string name="action_drawer_close">Drawer Close</string>
	<string name="action_remember">Remember me</string>

	<string name="dialog_cancel">Cancel</string>
	<string name="dialog_continue">Continue</string>

	<string name="transition_news">NEWS_TRANSITION</string>

	<string name="author">Created by Ellis Tsung, TJ Class of 2015</string>
	<string name="contributors">Additional thanks to: Timothy Cyrus and Rushi Shah</string>
	<string name="license">VIEW LICENSE</string>
	<string name="title_activity_news_detail">NewsDetailActivity</string>

	<string name="version">Version %1$s (%2$d)</string>
</resources>
